--- a/prototype/app/src/main/res/layout/content_wordbank.xml
+++ b/prototype/app/src/main/res/layout/content_wordbank.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.View.StoryActivity">
+    tools:context=".main.View.WordbankActivity"
+    tools:showIn="@layout/activity_wordbank">
 
 
-    <include layout="@layout/content_story" />
 
-</android.support.design.widget.CoordinatorLayout>
+</android.support.constraint.ConstraintLayout>
