--- a/prototype/app/src/main/res/layout/activity_categories.xml
+++ b/prototype/app/src/main/res/layout/activity_categories.xml
@@ -7,10 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".main.View.CategoriesActivity">
 
+<include
+    android:id="@+id/toolbar"
+    layout="@layout/toolbar" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recycler_view">
+        android:layout_marginTop="60dp"
+        android:id="@+id/recycler_view"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        >
 
     </androidx.recyclerview.widget.RecyclerView>
 
