--- a/prototype/app/src/main/res/layout/layout_listitem.xml
+++ b/prototype/app/src/main/res/layout/layout_listitem.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="15dp"
+    android:padding="10dp"
     android:id="@+id/parent_layout">
 
     <ImageView
@@ -19,17 +19,18 @@
 
     <TextView
         android:id="@+id/category_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/food"
-        android:layout_toRightOf="@id/categoryView"
-        android:layout_toEndOf="@id/categoryView"
-        android:textColor="@color/colorBlack"
+        android:layout_alignBottom="@id/categoryView"
+        android:layout_alignRight="@id/categoryView"
+        android:layout_alignLeft="@id/categoryView"
+        android:textColor="@color/colorPrimaryDark"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginStart="30dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginBottom="3dp"
         android:textSize="17sp"
-
         />
 
 </RelativeLayout>
