--- a/prototype/app/src/main/res/layout/activity_categories.xml
+++ b/prototype/app/src/main/res/layout/activity_categories.xml
@@ -15,10 +15,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
         android:id="@+id/recycler_view"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-        >
+        android:background="@drawable/border_recyclerview">
 
     </androidx.recyclerview.widget.RecyclerView>
 
