--- a/prototype/app/src/main/res/layout/toolbar.xml
+++ b/prototype/app/src/main/res/layout/toolbar.xml
@@ -8,4 +8,13 @@
     android:elevation="4dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Title"
+        android:textColor="@android:color/white"
+        android:textSize="20dp"
+        android:layout_gravity="center"
+        android:id="@+id/toolbar_title" />
+
 </androidx.appcompat.widget.Toolbar>
