--- a/prototype/app/src/main/res/values/colors.xml
+++ b/prototype/app/src/main/res/values/colors.xml
@@ -6,6 +6,20 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorButton">#7C55FB</color>
 
+<!-- tile backgrounds  -->
+    <color name="colorLightRed">#FFEBEE</color>
+    <color name="colorContrastRed">#B51F23</color>
 
+    <color name="colorLightOrange">#FFF8E2</color>
+    <color name="colorContrastOrange">#FD6F21</color>
+
+    <color name="colorLightGreen">#E8F5E9</color>
+    <color name="colorContrastGreen">#1E5D23</color>
+
+    <color name="colorLightPurple">#EDE7F5</color>
+    <color name="colorContrastPurple">#31228F</color>
+
+    <color name="colorLightBlue">#E2F5FD</color>
+    <color name="colorContrastBlue">#0C5999</color>
 </resources>
 
