--- a/prototype/app/src/main/res/layout/activity_categories.xml
+++ b/prototype/app/src/main/res/layout/activity_categories.xml
@@ -19,11 +19,10 @@
         android:layout_marginBottom="12dp"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
+        android:padding="10dp"
         android:id="@+id/recycler_view"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-        android:background="@drawable/border_recyclerview">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        android:background="@drawable/border_recyclerview" />
 
 </RelativeLayout>
 
