--- a/prototype/app/src/main/res/layout/layout_listitem.xml
+++ b/prototype/app/src/main/res/layout/layout_listitem.xml
@@ -3,15 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="10dp"
+    android:padding="5dp"
     android:id="@+id/parent_layout">
 
     <ImageView
         android:id="@+id/categoryView"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="30dp"
         android:contentDescription="@string/category_image"
-        android:padding="20dp"
         android:background="@drawable/border_image"
         app:srcCompat="@mipmap/ic_launcher"/>
 
@@ -25,10 +26,14 @@
         android:layout_alignLeft="@id/categoryView"
         android:textColor="@color/colorPrimaryDark"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="55dp"
-        android:layout_marginStart="55dp"
+        android:layout_marginLeft="65dp"
+        android:layout_marginStart="65dp"
         android:layout_marginBottom="3dp"
         android:textSize="17sp"
+        android:textStyle="bold"
         />
 
 </RelativeLayout>
+
+
+
