starting on wordbank screen

--- a/prototype/app/src/main/res/layout/activity_wordbank.xml
+++ b/prototype/app/src/main/res/layout/activity_wordbank.xml
@@ -5,12 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.view.category.CategoriesActivity"
+    tools:context=".main.view.wordbank.WordbankActivity"
     android:id="@+id/relative_layout">
 
-<include
-    android:id="@+id/toolbar"
-    layout="@layout/toolbar" />
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
@@ -25,4 +25,3 @@
         android:background="@drawable/border" />
 
 </RelativeLayout>
-
