--- a/prototype/app/src/main/res/layout/activity_quiz.xml
+++ b/prototype/app/src/main/res/layout/activity_quiz.xml
@@ -25,7 +25,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:background="@color/colorWhite"
-            tools:context=".main.view.QuizActivity">
+            tools:context=".main.view.quiz.QuizActivity">
 
 
             <Button
