--- a/prototype/app/src/main/res/layout/card_item.xml
+++ b/prototype/app/src/main/res/layout/card_item.xml
@@ -17,7 +17,7 @@
         >
 
         <ImageView
-            android:id="@+id/categoryImage"
+            android:id="@+id/cardImage"
             android:layout_width="match_parent"
             android:layout_height="160dp"
             android:layout_marginTop="10dp"
@@ -26,12 +26,12 @@
 
 
         <TextView
-            android:id="@+id/categoryText"
+            android:id="@+id/cardText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/categoryImage"
-            android:layout_alignEnd="@id/categoryImage"
-            android:layout_alignStart="@id/categoryImage"
+            android:layout_alignBottom="@id/cardImage"
+            android:layout_alignEnd="@id/cardImage"
+            android:layout_alignStart="@id/cardImage"
             android:gravity="center_horizontal"
             android:layout_centerVertical="true"
             android:layout_marginBottom="3dp"
