--- a/prototype/app/src/main/res/layout/card_item.xml
+++ b/prototype/app/src/main/res/layout/card_item.xml
@@ -3,25 +3,26 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_margin="6dp"
     card_view:cardCornerRadius="10dp"
-    app:strokeColor="@color/colorContrastBlue"
-    app:strokeWidth="2dp">
+   >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/parentLayout"
-        android:layout_margin="4dp"
+        android:layout_margin=".75dp"
+        android:background="@drawable/card_edge"
         >
 
         <ImageView
             android:id="@+id/cardImage"
             android:layout_width="match_parent"
             android:layout_height="160dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:contentDescription="category"
             android:paddingBottom="35dp" />
 
@@ -34,6 +35,7 @@
             android:layout_alignStart="@id/cardImage"
             android:gravity="center_horizontal"
             android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
             android:layout_marginBottom="3dp"
             android:drawableLeft="@drawable/ic_volume_up_24dp"
             android:drawablePadding="-20dp"
