--- a/prototype/app/src/main/res/layout/activity_categories.xml
+++ b/prototype/app/src/main/res/layout/activity_categories.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.view.category.CategoriesActivity"
+    tools:context=".main.Categories.view.CategoriesActivity"
     android:id="@+id/relative_layout">
 
 <include
