--- a/prototype/app/src/main/res/layout/activity_wordbank.xml
+++ b/prototype/app/src/main/res/layout/activity_wordbank.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.view.wordbank.WordbankActivity"
+    tools:context=".main.Wordbank.view.WordbankActivity"
     android:id="@+id/relative_layout">
 
     <include
