--- a/prototype/app/src/main/res/layout/activity_quiz.xml
+++ b/prototype/app/src/main/res/layout/activity_quiz.xml
@@ -73,7 +73,7 @@
                 app:layout_constraintTop_toTopOf="@+id/option3" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/quizImage"
                 android:layout_width="153dp"
                 android:layout_height="164dp"
                 android:layout_marginStart="129dp"
