--- a/prototype/app/src/main/res/layout/card_item.xml
+++ b/prototype/app/src/main/res/layout/card_item.xml
@@ -1,48 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
-    android:layout_margin="6dp"
-    card_view:cardCornerRadius="10dp"
-   >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/parentLayout"
-        android:layout_margin=".75dp"
-        android:background="@drawable/card_edge"
-        >
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
 
-        <ImageView
-            android:id="@+id/cardImage"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_view"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:contentDescription="category"
-            android:paddingBottom="35dp" />
-
-        <TextView
-            android:id="@+id/cardText"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/cardImage"
-            android:layout_alignEnd="@id/cardImage"
-            android:layout_alignStart="@id/cardImage"
-            android:gravity="center_horizontal"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="3dp"
-            android:drawableLeft="@drawable/ic_volume_up_24dp"
-            android:drawablePadding="-20dp"
-            android:text="line 1"
-            android:textSize="20sp"
-            android:textColor="@color/colorPrimaryDark" />
+            card_view:cardCornerRadius="10dp">
 
-    </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/parentLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin=".75dp"
+                android:background="@drawable/card_edge">
 
-</androidx.cardview.widget.CardView>
+                <ImageView
+                    android:id="@+id/cardImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginEnd="5dp"
+                    android:contentDescription="category"
+                    android:paddingBottom="35dp" />
+
+                <TextView
+                    android:id="@+id/cardText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignStart="@id/cardImage"
+                    android:layout_alignEnd="@id/cardImage"
+                    android:layout_alignBottom="@id/cardImage"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginBottom="3dp"
+                    android:drawableLeft="@drawable/ic_volume_up_24dp"
+                    android:drawablePadding="-20dp"
+                    android:gravity="center_horizontal"
+                    android:text="line 1"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="20sp" />
+
+            </RelativeLayout>
+
+        </androidx.cardview.widget.CardView>
+    </FrameLayout>
+
+    <LinearLayout
+        android:id="@+id/confirmation_buttons"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start|center_vertical"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/confirmButton"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/confirm"
+            android:padding="15dp" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="10dp" />
+
+        <Button
+            android:id="@+id/cancelButton"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/cancel"
+            android:padding="15dp" />
+
+    </LinearLayout>
+
+</FrameLayout>
