sillver stars in quizzes

--- a/prototype/app/src/main/res/values/attrs.xml
+++ b/prototype/app/src/main/res/values/attrs.xml
@@ -5,6 +5,7 @@
     <attr name="colorWhite" format="color" />
     <attr name="colorDarkGray" format="color" />
     <attr name="colorGold" format="color" />
+    <attr name="colorSilver" format="color" />
     <attr name="colorPrimaryLight" format="color" />
 
     <attr name="colorLightRed" format="color" />
