--- a/prototype/app/src/main/res/values/colors.xml
+++ b/prototype/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="colorButtonBlue">#1D93E7</color>
     <color name="colorDarkGray">#424242</color>
     <color name="colorGold">#FDD530</color>
+    <color name="colorSilver">#b8b8b8</color>
     <color name="colorWhite">#FFFFFF</color>
 
 
