Added Home screen to the beginning of the application. Linked the word bank to "Categories" screen and verified that original steps still follow. TODO: Fix the back button from "Categories" to "Home". Currently it's not implemented because originally it's meant to redirect to "Story" page. We should make it an universal back button instead.

--- a/prototype/app/src/main/res/layout/home_page.xml
+++ b/prototype/app/src/main/res/layout/home_page.xml
@@ -28,6 +28,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginEnd="39dp"
         android:text="@string/word_bank"
+        android:onClick="wordBankButtonOnClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/storyButton"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,6 +43,7 @@
         android:layout_marginTop="13dp"
         android:layout_marginEnd="40dp"
         android:text="@string/stories"
+        android:onClick="storyPageButtonOnClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.656"
