aadded new transition between launch and home screens. removed logo from home screen and added temp button for character screen

--- a/prototype/app/src/main/res/layout/activity_home.xml
+++ b/prototype/app/src/main/res/layout/activity_home.xml
@@ -1,18 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
     <Button
-        android:id="@+id/word_bank_button"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@drawable/confirm"
-        android:padding="15dp" />
+        android:id="@+id/wordBankButton"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="136dp"
+        android:layout_height="86dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginBottom="25dp"
+        android:onClick="wordBankButtonOnClick"
+        android:text="@string/word_bank"
+        android:layout_gravity="center"/>
 
+    <Button
+        android:id="@+id/storyButton"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="136dp"
+        android:layout_height="86dp"
+        android:layout_margin="25dp"
+        android:onClick="storyPageButtonOnClick"
+        android:text="@string/stories"
+        android:layout_gravity="center"/>
 
+    <Button
+        android:id="@+id/characterButton"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="136dp"
+        android:layout_height="86dp"
+        android:layout_margin="25dp"
+        android:onClick="characterPageButtonOnClick"
+        android:text="@string/characters"
+        android:layout_gravity="center"/>
 </LinearLayout>
