--- a/prototype/app/src/main/res/layout/image_card_item.xml
+++ b/prototype/app/src/main/res/layout/image_card_item.xml
@@ -31,11 +31,10 @@
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="6dp"
                     android:layout_marginEnd="5dp"
-                    android:contentDescription="character"
-                    android:paddingBottom="35dp" />
+                    android:padding="15dp"
+                    android:contentDescription="character" />
 
             </RelativeLayout>
-
         </androidx.cardview.widget.CardView>
     </FrameLayout>
 
