--- a/prototype/app/src/main/res/layout/text_card_item.xml
+++ b/prototype/app/src/main/res/layout/text_card_item.xml
@@ -31,9 +31,10 @@
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="6dp"
                     android:layout_marginEnd="5dp"
+                    android:padding="10dp"
                     android:contentDescription="characterName"
                     android:textColor="@color/colorPrimaryDark"
-                    android:gravity="center_horizontal"
+                    android:gravity="center"
                     android:textSize="20sp"
                     android:text="line 1"
                     android:paddingBottom="35dp" />
