adding temp images, changes to confirmation dialog

--- a/prototype/app/src/main/res/layout/card_item.xml
+++ b/prototype/app/src/main/res/layout/card_item.xml
@@ -21,7 +21,7 @@
             card_view:cardCornerRadius="10dp">
 
             <RelativeLayout
-                android:id="@+id/parentLayout"
+                android:id="@+id/parent_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin=".75dp"
