--- a/prototype/app/src/main/res/drawable/card_edge.xml
+++ b/prototype/app/src/main/res/drawable/card_edge.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <solid android:color="#BBF500" />
+    <solid android:color="@color/colorLightPurple" />
     <size android:width="0dp"/>
     <padding android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp"/>
     <corners android:topLeftRadius="8dp" android:bottomLeftRadius="8dp"
