--- a/prototype/app/src/main/res/layout/activity_character.xml
+++ b/prototype/app/src/main/res/layout/activity_character.xml
@@ -69,19 +69,19 @@
             android:orientation="vertical"
             android:visibility="gone">
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:srcCompat="@tools:sample/avatars" />
+            <include
+                android:id="@+id/image_selected"
+                layout="@layout/image_card_item"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center_horizontal" />
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView"
-                android:textAlignment="center"
-                tools:text="Billy" />
+            <include
+                android:id="@+id/name_selected"
+                layout="@layout/text_card_item"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center_horizontal" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -93,14 +93,18 @@
                     android:id="@+id/confirm_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:background="@android:color/transparent"
                     app:srcCompat="@drawable/confirm" />
 
                 <ImageButton
                     android:id="@+id/cancel_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:background="@android:color/transparent"
                     app:srcCompat="@drawable/cancel" />
             </LinearLayout>
         </LinearLayout>
