--- a/prototype/app/src/main/res/layout/image_card_item.xml
+++ b/prototype/app/src/main/res/layout/image_card_item.xml
@@ -23,7 +23,7 @@
                 android:layout_height="match_parent" >
 <!--                android:background="@drawable/shadow"-->
                 <RelativeLayout
-                    android:id="@+id/parentLayout"
+                    android:id="@+id/parent_layout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin=".75dp"
