--- a/prototype/app/src/main/res/layout/text_card_item.xml
+++ b/prototype/app/src/main/res/layout/text_card_item.xml
@@ -8,40 +8,53 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="10dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             card_view:cardCornerRadius="10dp">
 
-            <RelativeLayout
-                android:id="@+id/parentLayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin=".75dp"
-                android:background="@drawable/card_edge">
 
-                <TextView
-                    android:id="@+id/characterName"
+                <RelativeLayout
+                    android:id="@+id/parent_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="160dp"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginEnd="5dp"
-                    android:padding="10dp"
-                    android:contentDescription="characterName"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:gravity="center"
-                    android:textSize="20sp"
-                    android:text="line 1"
-                    android:paddingBottom="35dp" />
+                    android:layout_height="match_parent"
+                    android:layout_margin=".75dp"
+                    android:background="@drawable/card_edge">
 
-            </RelativeLayout>
+                    <TextView
+                        android:id="@+id/character_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="160dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:contentDescription="characterName"
+                        android:padding="10dp"
+                        android:text="line 1"
+                        android:textAlignment="center"
+                        android:gravity="center"
+                        android:textColor="@color/colorContrastPurple"
+                        android:textSize="20sp" />
+
+                    <ImageView
+                        android:id="@+id/speaker_icon"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:contentDescription="speakerIcon"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerHorizontal="true"
+                        android:paddingBottom="35dp"
+                        app:srcCompat="@drawable/ic_volume_up_24dp" />
+
+                </RelativeLayout>
 
         </androidx.cardview.widget.CardView>
+
     </FrameLayout>
 
 </FrameLayout>
