--- a/prototype/app/src/main/res/layout/activity_character.xml
+++ b/prototype/app/src/main/res/layout/activity_character.xml
@@ -62,6 +62,20 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/blur"
+            android:visibility="gone"
+            android:layout_marginLeft="11dp"
+            android:layout_marginRight="11dp"
+            android:layout_marginBottom="11dp"
+            android:layout_marginTop="70dp"
+
+
+
+            android:background="#AAFFFFFF"/>
+
+        <LinearLayout
             android:id="@+id/confirmation_dialog"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -82,6 +96,7 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_gravity="center_horizontal" />
+
 
             <LinearLayout
                 android:layout_width="wrap_content"
