--- a/prototype/app/src/main/res/layout/activity_story_selection.xml
+++ b/prototype/app/src/main/res/layout/activity_story_selection.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".main.Home.view.StorySelectionActivity"
+    tools:context=".main.Stories.view.StorySelectionActivity"
     android:id="@+id/relative_layout">
 
     <include
