--- a/prototype/app/src/main/res/layout/controls_bar.xml
+++ b/prototype/app/src/main/res/layout/controls_bar.xml
@@ -4,7 +4,6 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary"
-    android:elevation="4dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
     <LinearLayout
@@ -12,14 +11,13 @@
         android:layout_height="match_parent"
         android:orientation="horizontal" >
 
-
         <ImageView
             android:id="@+id/replay_button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="10dp"
-            android:contentDescription="Replay button"
+            android:contentDescription="@string/replay_button"
             app:srcCompat="@drawable/replay_icon" />
 
         <ImageView
@@ -28,7 +26,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:contentDescription="Play button"
+            android:contentDescription="@string/play_button"
             app:srcCompat="@drawable/play_icon" />
 
         <ImageView
@@ -36,9 +34,21 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:contentDescription="Pause button"
+            android:layout_marginEnd="20dp"
+            android:contentDescription="@string/pause_button"
             app:srcCompat="@drawable/pause_icon" />
+
+        <ProgressBar
+            android:id="@+id/determinateBar"
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:minWidth="150dp"
+            android:progress="1"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:progressDrawable="@drawable/progress_bar" />
 
     </LinearLayout>
 
