--- a/prototype/app/src/main/res/layout/activity_story_template.xml
+++ b/prototype/app/src/main/res/layout/activity_story_template.xml
@@ -38,14 +38,27 @@
             android:visibility="visible"
             app:srcCompat="@drawable/story_wacky_costume_party" />
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="9dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="9dp"
+            android:layout_marginBottom="67dp"
+            android:padding="2dp"
+            android:scrollbars="none"
+            android:background="@color/colorWhite">
         <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="9dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="9dp"
-                android:layout_marginBottom="67dp"
-                android:background="@color/colorWhite" />
+            android:id="@+id/story_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:textSize="12pt"
+            android:lineSpacingMultiplier="1.5"
+            android:lineSpacingExtra="3dp"
+            android:textColor="@color/colorAppBlack" />
+
+        </ScrollView>
 
     </LinearLayout>
 
